Fix/views (#158)
* modify ColorSelector component

* delete reply to a BCF comment

* add assignedTo filter

* add color props to FileUploadButton component

* add toggle event on setting card header instead of arrow svg

* fix createBcfTopic horizontal scrollbar

--- a/src/components/specific/bcf/bcf-settings/setting-card/SettingCard.scss
+++ b/src/components/specific/bcf/bcf-settings/setting-card/SettingCard.scss
@@ -2,6 +2,7 @@
   background: var(--color-white);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   &__header {
+    cursor: pointer;
     &__length {
       padding: 0 4px;
       min-width: 21px;
@@ -11,9 +12,6 @@
       border-radius: 50px;
       font-size: 11px;
       font-weight: 700;
-    }
-    svg {
-      cursor: pointer;
     }
   }
   &__content {
